# rtm-nightrose

./: CMakeLists.txt  plasma-applet-rtm.desktop  rtm.cpp  rtm.h  rtmapi.c  rtmapi.cpp  rtmapi.h  rtmparser.h  widj.ui
rtm/: CMakeLists.txt  rtmapi.c  rtmapi.h  test_rtm_auth.c  test_rtm_method.c
